AWSClientRuntime/Tests/Protocols/RestXML/Models/Errors/ComplexXMLNestedErrorData.swift
//
// Copyright Amazon.com Inc. or its affiliates.
// All Rights Reserved.
//
// SPDX-License-Identifier: Apache-2.0
//

// Code generated by smithy-swift-codegen. DO NOT EDIT!

public struct ComplexXMLNestedErrorData: Equatable {
    public let foo: String?

    public init (
        foo: String? = nil
    )
    {
        self.foo = foo
    }
}
